--- a/css/templatemo-style.css
+++ b/css/templatemo-style.css
@@ -1,17 +1,17 @@
 body
 	{
-		background: url('../images/2.jpg') no-repeat;
+		background: url('../images/2.png') no-repeat;
 		width: 100%;
 		background-size: cover;
 		background-attachment: fixed;
- 		color: #f0f0f0;
+ 		color: #000000;
 		font-family: 'Open Sans', sans-serif;
 		font-weight: 300;
 		overflow-x: hidden; /* prevent horizontal scrollbar from appearing */
 	}
 	
 a {
-	color: #47C6F8;
+	color: #000000;
 }
 	
 a:hover {
