--- a/css/templatemo-style.css
+++ b/css/templatemo-style.css
@@ -1,6 +1,6 @@
 body
 	{
-		background: url('../images/2.png') no-repeat;
+		background-color: dodgerblue;
 		width: 100%;
 		background-size: cover;
 		font-family: 'Open Sans', sans-serif;
@@ -9,23 +9,24 @@ body
 	}
 	
 a {
-	color: #000000;
+	color: #ffffff;
 }
 	
 a:hover {
-	color: #0FF;
+	color: rgb(0, 60, 255);
 }
 
 /* start h2 */
 h2
-	{
+	{	
+		color: rgb(226, 226, 226);
 		text-align: center;
 		font-size: 40px;
 		padding-bottom: 40px;
 	}	
 h2 span
 	{
-		color: #28a7e9;
+		color: #000000;
 		font-weight: bold;
 	}
 /* end h2 */
@@ -33,9 +34,9 @@ h2 span
 /* start about team service portfolio contact */
 #about, #team, #service,
 #portfolio, #contact
-	{
-		padding-top: 60px;
-		padding-bottom: 40px;
+	{	color: #fff;
+		padding-top: 15px;
+		padding-bottom: 15px;
 	}
 /* end about team service portfolio contact */
 
@@ -74,33 +75,33 @@ h2 span
   	}
 .sk-spinner-wave div 
 	{
-  		background-color: #333;
+  		background-color: rgb(255, 255, 255);
   		height: 100%;
   		width: 6px;
   		display: inline-block;
-         -webkit-animation: sk-waveStretchDelay 1.2s infinite ease-in-out;
-                 animation: sk-waveStretchDelay 1.2s infinite ease-in-out;
+         -webkit-animation: sk-waveStretchDelay 0.3s infinite ease-in-out;
+                 animation: sk-waveStretchDelay 0.3s infinite ease-in-out;
          
     }
 .sk-spinner-wave .sk-rect2 
 	{
-          -webkit-animation-delay: -1.1s;
-                  animation-delay: -1.1s; 
+          -webkit-animation-delay: -0.3s;
+                  animation-delay: -0.3s; 
       }
 .sk-spinner-wave .sk-rect3 
 	{
-          -webkit-animation-delay: -1s;
-                  animation-delay: -1s; 
+          -webkit-animation-delay: -0.3s;
+                  animation-delay: -0.3s; 
      }
 .sk-spinner-wave .sk-rect4 
 	{
-          -webkit-animation-delay: -0.9s;
-                  animation-delay: -0.9s;
+          -webkit-animation-delay: -0.3s;
+                  animation-delay: -0.3s;
      }
 .sk-spinner-wave .sk-rect5 
 	{
-          -webkit-animation-delay: -0.8s;
-                  animation-delay: -0.8s; 
+          -webkit-animation-delay: -0.3s;
+                  animation-delay: -0.3s; 
      }
 
 @-webkit-keyframes sk-waveStretchDelay {
@@ -129,14 +130,13 @@ h2 span
 	{	background-color: rgb(29, 29, 29);
 		position: fixed;
 		top: 0;
-		box-shadow: black;
 		margin: 0 !important;
 	}
 .navbar-default .navbar-brand
 	{
 		font-weight: 500;
-		color: #28a7e9;
-		font-size: 30px;
+		color: #ffffff;
+		font-size: 37px;
 		height: 70px;
 		line-height: 40px;
 		padding: 10px 0px 0px 10px;
@@ -168,27 +168,27 @@ h2 span
 /* start home */
 #home
 	{	
-		margin-top: 35px;
-		padding-top: 35px;
+		background-blend-mode: darken;
+		margin-top: 30px;
+		padding-top: 30px;
 		padding-bottom: 0px;
 		min-height: 650px;
 	}
 #home h1
-	{
+	{	color: rgb(226, 226, 226);
 		font-weight: 300;
 		font-size: 70px;
 		padding-bottom: 10px;
 	}
 #home h1 span
 	{
-		color: #28a7e9;
+		color: #000000;
 		font-weight: bold;
 	}
 #home .btn
-	{
-		background: transparent;
-		border-radius: 2px;
-		color: rgb(255, 181, 83);
+	{	background: #20242749;
+		border-color: transparent;
+		color: rgb(255, 255, 255);
 		font-size: 16px;
 		font-weight: bold;
 		margin-top:30px;
@@ -197,22 +197,25 @@ h2 span
 		width: 180px;
 		height: 60px;
 		padding-top: 18px;
-		-webkit-transition: all 0.4s ease-in-out;
-		        transition: all 0.4s ease-in-out;
+		-webkit-transition: all 0.2s ease-in-out;
+		        transition: all 0.2s ease-in-out;
 	}
 #home .btn:hover
-	{
-		background: #28a7e9;
+	{	
+		color: rgb(255, 255, 255);
+		background: #202427;
 		border-color: transparent;
 	}
 
 h5{
+	color:#fff;
 	margin-top: 50px;
 	padding-top: 50px;
 	font-size: 20px;
 }
 
 .element {
+	color: #fff;
 	height: 60px;
 	font-size: 26px;
 	margin-bottom: 75px;
@@ -239,7 +242,8 @@ h5{
 		margin-right: 20px;
 	}
 #about .media-heading-wrapper h3
-	{
+	{	
+		color: #fff;
 		font-size: 18px;
 		font-weight: bold;
 		padding-top: 20px;
@@ -249,8 +253,7 @@ h5{
 
 /* start team */
 #team .team-wrapper
-	{
-		background: #404040;
+	{	color: #fff;
 		padding-bottom: 10px;
 		-webkit-transition: all 0.4s ease-in-out;
 		        transition: all 0.4s ease-in-out;
@@ -277,22 +280,23 @@ h5{
 
 /* start service */
 #service .col-md-4
-	{
+	{	
+		color: #fff;
 		padding: 40px;
 		-webkit-transition: all 0.4s ease-in-out;
 		        transition: all 0.4s ease-in-out;
 	}
 #service .col-md-4:hover
 	{
-		background: #505050;
+		background: #028db8;
 	}
 #service .active
 	{
-		background: #505050;
+		background: #0000001e;
 		padding: 40px;
 	}
 #service .fa
-	{
+	{	
 		border: 1px solid #fff;
 		border-radius: 2px;
 		color: #fff;
@@ -304,7 +308,7 @@ h5{
 	}
 #service h4
 	{
-		color: #28a7e9;
+		color: #ffffff;
 		font-weight: 600;
 		padding-top: 10px;
 		padding-bottom: 14px;
@@ -326,7 +330,7 @@ h5{
 	}
 #portfolio .portfolio-thumb
 	{
-		overflow: hidden;
+		overflow: visible;
 		padding: 0;
 		margin: 0 auto;
 	}
@@ -369,13 +373,13 @@ h5{
 
 /* start contact */
 #contact
-	{
+	{	color:#fff;
 		background:transparent;
 	}
 #contact .form-control
 	{
 		background: transparent;
-		border: 1px solid #28a7e9;
+		border: 1px solid #ffffff;
 		border-radius: 2px;
 		box-shadow: none;
 		color: #fff;
@@ -392,18 +396,18 @@ h5{
 	}
 #contact input[type="submit"]
 	{
-		background: #28a7e9;
+		background: #0000001f;
 		font-weight: bold;
-		-webkit-transition: all 0.4s ease-in-out;
-		        transition: all 0.4s ease-in-out;
+		-webkit-transition: all 0.2s ease-in-out;
+		        transition: all 0.2s ease-in-out;
 	}
 #contact input[type="submit"]:hover
-	{
-		background: transparent;
+	{	
+		background: #000000;
 	}
 #contact address
 	{
-		border-bottom: 1px solid #505050;
+		border-bottom: 1px solid #ffffff;
 		padding-top: 30px;
 	}
 #contact address .address-title
@@ -432,7 +436,7 @@ h5{
 
 /* start copyright */
 #copyright
-	{
+	{	color: #fff;
 		padding: 20px;
 	}
 #copyright p
