--- a/assets/css/openbosniana.css
+++ b/assets/css/openbosniana.css
@@ -1000,3 +1000,11 @@ footer {
     object-fit: contain;
     padding:5px
 }
+.linija-footer-gore {
+    color: #6d6d6d;
+    text-align: center;
+    padding: 0;
+    border: 0;
+    border-bottom: 2px solid transparent;
+    border-image: linear-gradient(to right, transparent 20%, #6d6d6d 50%, transparent 80%) 1;
+}
