--- a/assets/css/openbosniana.css
+++ b/assets/css/openbosniana.css
@@ -49,7 +49,7 @@ h6 {
     border-bottom:1px #03a9f4 solid;
 }
 .ms-hero{
-    background-image:url(home.svg);
+    background-image:url("home.jpg");
     background-repeat:no-repeat;
     background-size:cover;
     background-position:center;
