--- a/assets/home_new/style.css
+++ b/assets/home_new/style.css
@@ -313,19 +313,19 @@ label[for="remember-password"] {
 
 }
 #slika1{
-  background-image:url("https://bosniana.org/home_new/serije.png")
+  background-image:url("https://bosniana.org/assets/home_new/serije.png")
 }
 #slika2{
-  background-image:url("https://bosniana.org/home_new/filmovi.webp")
+  background-image:url("https://bosniana.org/assets/home_new/filmovi.webp")
 }
 #slika3{
-  background-image:url("https://bosniana.org/home_new/tv.jpg")
+  background-image:url("https://bosniana.org/assets/home_new/tv.jpg")
 }
 #slika4{
-  background-image:url("https://bosniana.org/home_new/radio.jpg")
+  background-image:url("https://bosniana.org/assets/home_new/radio.jpg")
 }
 #slika5{
-  background-image:url("https://bosniana.org/home_new/kanali.jpg")
+  background-image:url("https://bosniana.org/assets/home_new/kanali.jpg")
 }
 /* ===== TOP MENU ===== */
 
