--- a/assets/home_new/pages.css
+++ b/assets/home_new/pages.css
@@ -15,13 +15,18 @@
 
 /* === Naslovi === */
 .app-page h2 {
-    font-size: 16px;
+    font-size: 15px;
     margin-bottom: 10px;
     font-weight: 600;
     color:#000;
     font-family: 'Montserrat Ace', sans-serif;
 }
-
+@media (max-height: 480px) {
+    .app-page{
+    min-height: calc(100vh - 150px); /* ostavi prostor za top menu */
+    margin-top:70px
+    }
+}
 /* === Tekst / info === */
 .app-page p {
     max-width: 800px;
@@ -41,7 +46,45 @@
     margin: 10px 0;
     border-radius: 12px;
 }
-
+#podesavanja{
+    max-width: 500px;
+    width:100%;
+    text-decoration:none;
+    gap: 10px;
+    margin:10px 0;
+    font-size: 15px;
+    font-weight: 500;
+    font-family: 'Montserrat Ace', sans-serif;
+    background: rgba(255, 255, 255, 0.1);
+    border-radius: 12px;
+    padding:5px
+}
+#podesavanja a{
+    text-decoration:none;
+    display: flex;
+    font-size: 16px;
+    font-weight: 500;
+    font-family: 'Montserrat Ace', sans-serif;
+    color:#000;
+    padding:5px;
+    margin:6px 0;
+    flex-direction: column; /* slika iznad teksta */
+    align-items: start;    /* horizontalno centriranje */
+}
+#podesavanja a:focus {
+    box-shadow: 0 0 0 2px rgba(255, 255, 255, 0.8);
+    border-radius: 6px;
+    font-weight:bold;
+    background: rgba(0, 0, 0, 0.2);
+    color:#fff;
+}
+#podesavanja a:hover {
+    box-shadow: 0 0 0 2px rgba(255, 255, 255, 0.8);
+    border-radius: 6px;
+    color:#fff;
+    background: rgba(0, 0, 0, 0.2);
+    font-weight:bold;
+}
 /* === Grid za više slika (ako zatreba) === */
 .app-page .image-row {
     display: flex;
